# cube

./: .gitignore  Cube.hs  Main.hs  Makefile  README.md  Tests.hs  cube.cabal  rubiks-cube.cabal
Data/: Cube.hs  RubiksCube.hs
Data/Cube/: Colors.hs  Faces.hs
