Name:                rubiks-cube
Version:             0.0
Build-Type:          Simple
Description:         A terminal-based Rubik's Cube emulator
License:             MIT
License-file:        LICENSE
Author:              Jay Adkisson
Maintainer:          jjmadkisson@gmail.com
Cabal-Version:       >=1.2

Library
  Exposed-Modules:   Data.RubiksCube
  Build-Depends:     base, parsec, array
